--- a/beetletvis-data.html
+++ b/beetletvis-data.html
@@ -140,8 +140,9 @@
                     Bodies.rectangle(-25, canvasheight/2, 50, canvasheight, {isStatic:true}),
                     Bodies.rectangle(canvaswidth+25, canvasheight/2, 50, canvasheight, {isStatic:true})
                 ]
-
-                circlesize.push(beetle)
+                
+                circlesize = [40]
+                
                 circles = [
                     Bodies.circle(canvaswidth/2,100,circlesize[0]),
                 ]
