--- a/beetletvis-data-2 old.html
+++ b/beetletvis-data-2 old.html
@@ -676,13 +676,15 @@
                     endShape(CLOSE);
                 }
 
-                circletexts = []
                 // circle text
                 for (let i=0; i<circles.length; i++){
                     shapevertices = circles[i].vertices;
                     fill(255,255,255);
                     ellipse(shapevertices[0]['x'], shapevertices[0]['y'],10, 10);
-                    text = circletexts[i]
+                    //center = circles[i].vertices.centre;
+                    //ellipse(center['x'], center.y,10, 10);
+                    //text = Object.keys(currentgroup)[i]
+                    text = currentgroup
                     con.fillText(text, shapevertices[0]['x']+10, shapevertices[0]['y']);
                 }
 
@@ -744,7 +746,6 @@
                     circlesize = [];
                     tempcirclesize = [];
                     groupswithin = [];
-                    circletexts = [];
 
                     // click info
                     console.log('######')
@@ -752,7 +753,6 @@
                     console.log("COUNTGROUPS: " + countGroups(String(selectedgroup[selectedgroup.length-1])));
 
                     // prep circles
-                    circletexts = findGroups(String(selectedgroup[selectedgroup.length-1]));
                     groupswithin = findGroups(String(selectedgroup[selectedgroup.length-1]));
                     console.log("GROUPSWITHIN: " + groupswithin) // object, items are string
                     for (i in groupswithin) {
@@ -769,7 +769,6 @@
                     console.log('-----------')
                     console.log('TEMPCIRCLESIZE: ' + tempcirclesize)
                     console.log("CIRCLESIZE: " + circlesize)
-                    console.log("SELECTED GROUP: " + selectedgroup[selectedgroup.length-1])
 
                     // draw circles
                     for (i=0; i<countGroups(String(selectedgroup[selectedgroup.length-1])); i++) {
@@ -778,6 +777,12 @@
                         //print('circle add')
                         //print(circlesize[circlesize.length-1])
                     }
+
+                    //var path = data.instance.get_path(data.node,',');
+                    //console.log('SELECTED PATH: ' + path); // path returns as string 
+                    console.log("SELECTED GROUP: " + selectedgroup[selectedgroup.length-1])
+                    //console.log(String(selectedgroup[selectedgroup.length-1]))
+                    //console.log(selectedgroup.length)
                 });
 
                 // 8 interact with the tree - either way is OK
@@ -915,6 +920,7 @@
             };
             // END COUNTFAMILIES FUNCTION
 
+
             // START COUNTGROUPS FUNCTION
             function countGroups(group) {
                 result = 0;
@@ -947,11 +953,11 @@
                                             }
                                         });
                                     }
-                                })
+                                });
                             }
                         })
                     }
-                });
+                })
                 return result;
             };
             // START COUNTGROUPS FUNCTION
@@ -996,14 +1002,8 @@
                                                     // check superfamilies
                                                     if (superfamkey == group) {
                                                         result = Object.keys(beetledata["order-Coleoptera"][suborderkey][infrakey][cladekey][superfamkey]).length;
-                                                        Object.values(beetledata["order-Coleoptera"][suborderkey][infrakey][cladekey][superfamkey]).forEach(famvalue => {
-                                                            children.push(famvalue);
-                                                        })
-                                                    } else {
-                                                        Object.keys(beetledata["order-Coleoptera"][suborderkey][infrakey][cladekey][superfamkey]).forEach(famkey => {
-                                                            if (famkey == group) {
-                                                                children = ['none']
-                                                            }
+                                                        Object.values(beetledata["order-Coleoptera"][suborderkey][infrakey][cladekey][superfamkey]).forEach(suborderkey => {
+                                                            children.push(suborderkey);
                                                         })
                                                     }
                                                 });
@@ -1035,7 +1035,6 @@
 
     </body>
 </html>
-
 
 
 
